# slide_tagging

./: .env.example  .gitignore  README.md  Strategy_ICO_STO_Study_Spring_2020.tagged.json  pyproject.toml
.claude/: settings.local.json
docs/: deck_tagging_prompt.md  enrich.md  init.md  manual_tagging.md  vlm_prompt_test.md
docs/superpowers/specs/: 2026-05-23-slide-render-step-design.md
reference_data/hand_labels/: digital-auto-label-review.md  digital-auto-report-2023.tagged.json  electric-vehicle-sales-review-q4-2022.tagged.json  ereadiness-study-2023.tagged.json  nigeria-economic-outlook-october-2023-v1.tagged.json
scripts/: make_contact_sheet.py  make_sample_deck.py
src/slide_tagger/: __init__.py  __main__.py  cli.py  enrich.py  merge.py  paste.py  prompt_source.py  provenance.py
src/slide_tagger/eval/: __init__.py  compare.py  fields.py  report.py  score.py
src/slide_tagger/extractors/render/: __init__.py  paths.py  rasterize.py  soffice.py
src/slide_tagger/extractors/structural/: aggregator.py  density.py  design_system.py  pptx_parser.py  prefill.py  recurring_images.py
src/slide_tagger/schema/: __init__.py  enums.py  models.py  tagged.py
tests/: test_aggregator.py  test_contact_sheet.py  test_design_system.py  test_enrich.py  test_enrich_cmd.py  test_eval_compare.py  test_eval_score.py  test_merge.py  test_paste.py  test_pptx_parser.py  test_prefill.py  test_prompt_source.py  test_recurring_images.py  test_render.py  test_render_paths.py  test_tagged.py
