[project]
name = "slide-tagger"
version = "0.1.0"
description = "Pipeline A: deterministic structural extraction for slide-deck tagging"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=1.0.0",
    "pydantic>=2.6",
    "imagehash>=4.3.2",
    "pdf2image>=1.17",
    "pillow>=10.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
slide-tagger = "slide_tagger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slide_tagger"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
